test/log/reduction/vrssum_v_u64_m.txt
vrssum_v_u64_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vrssum_v_u64_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vrssum_v_u64_m.c:30:6: warning: no previous prototype for 'vrssum_v_u64_m_golden' [-Wmissing-prototypes]
   30 | void vrssum_v_u64_m_golden(uint64_t *mask,uint64_t *maskoff,uint64_t *a,uint64_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~
vrssum_v_u64_m.c: In function 'vrssum_v_u64_m_golden':
vrssum_v_u64_m.c:31:1: error: unknown type name 'Operator'
   31 | Operator Line --- TODO
      | ^~~~~~~~
vrssum_v_u64_m.c:31:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '--' token
   31 | Operator Line --- TODO
      |               ^~
vrssum_v_u64_m.c:35:5: warning: 'main' is normally a non-static function [-Wmain]
   35 | int main(void) {
      |     ^~~~
vrssum_v_u64_m.c: In function 'main':
vrssum_v_u64_m.c:37:13: warning: declaration of 'mask' shadows a parameter [-Wshadow]
   37 |     bool8_t mask;
      |             ^~~~
vrssum_v_u64_m.c:30:38: note: shadowed declaration is here
   30 | void vrssum_v_u64_m_golden(uint64_t *mask,uint64_t *maskoff,uint64_t *a,uint64_t *exp_result) {
      |                            ~~~~~~~~~~^~~~
vrssum_v_u64_m.c:38:16: warning: declaration of 'maskoff' shadows a parameter [-Wshadow]
   38 |     uint64x8_t maskoff;
      |                ^~~~~~~
vrssum_v_u64_m.c:30:53: note: shadowed declaration is here
   30 | void vrssum_v_u64_m_golden(uint64_t *mask,uint64_t *maskoff,uint64_t *a,uint64_t *exp_result) {
      |                                           ~~~~~~~~~~^~~~~~~
vrssum_v_u64_m.c:39:16: warning: declaration of 'a' shadows a parameter [-Wshadow]
   39 |     uint64x8_t a;
      |                ^
vrssum_v_u64_m.c:30:71: note: shadowed declaration is here
   30 | void vrssum_v_u64_m_golden(uint64_t *mask,uint64_t *maskoff,uint64_t *a,uint64_t *exp_result) {
      |                                                             ~~~~~~~~~~^
vrssum_v_u64_m.c:45:14: warning: declaration of 'exp_result' shadows a parameter [-Wshadow]
   45 |     uint64_t exp_result[8] = {0};
      |              ^~~~~~~~~~
vrssum_v_u64_m.c:30:83: note: shadowed declaration is here
   30 | void vrssum_v_u64_m_golden(uint64_t *mask,uint64_t *maskoff,uint64_t *a,uint64_t *exp_result) {
      |                                                                         ~~~~~~~~~~^~~~~~~~~~
vrssum_v_u64_m.c:47:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   47 |     data_init_bool(mask, exp_mask, 8, 0xffffffffffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vrssum_v_u64_m.c:55:29: error: incompatible type for argument 1 of 'vrssum_v_u64_m'
   55 |     result = vrssum_v_u64_m(mask,maskoff,a);
      |                             ^~~~
      |                             |
      |                             bool8_t
In file included from vrssum_v_u64_m.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2755:1: note: expected 'bool8x2_t' but argument is of type 'bool8_t'
 2755 | __RUGRATS_REDUC_V_OP (rssum, u, uint, 64, 8)
      | ^~~~~~~~~~~~~~~~~~~~
vrssum_v_u64_m.c:60:43: warning: format '%x' expects argument of type 'unsigned int', but argument 3 has type 'long long unsigned int' [-Wformat=]
   60 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                          ~^                             ~~~~~~~~~
      |                                           |                                   |
      |                                           unsigned int                        long long unsigned int
      |                                          %llx
vrssum_v_u64_m.c:60:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'uint64_t' {aka 'long long unsigned int'} [-Wformat=]
   60 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     uint64_t {aka long long unsigned int}
      |                                                               %llx
vrssum_v_u64_m.c: In function 'vrssum_v_u64_m_golden':
vrssum_v_u64_m.c:75:1: error: expected declaration or statement at end of input
   75 | }
      | ^
vrssum_v_u64_m.c:30:38: warning: unused parameter 'mask' [-Wunused-parameter]
   30 | void vrssum_v_u64_m_golden(uint64_t *mask,uint64_t *maskoff,uint64_t *a,uint64_t *exp_result) {
      |                            ~~~~~~~~~~^~~~
vrssum_v_u64_m.c:30:53: warning: unused parameter 'maskoff' [-Wunused-parameter]
   30 | void vrssum_v_u64_m_golden(uint64_t *mask,uint64_t *maskoff,uint64_t *a,uint64_t *exp_result) {
      |                                           ~~~~~~~~~~^~~~~~~
vrssum_v_u64_m.c:30:71: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vrssum_v_u64_m_golden(uint64_t *mask,uint64_t *maskoff,uint64_t *a,uint64_t *exp_result) {
      |                                                             ~~~~~~~~~~^
vrssum_v_u64_m.c:30:83: warning: unused parameter 'exp_result' [-Wunused-parameter]
   30 | void vrssum_v_u64_m_golden(uint64_t *mask,uint64_t *maskoff,uint64_t *a,uint64_t *exp_result) {
      |                                                                         ~~~~~~~~~~^~~~~~~~~~
At top level:
vrssum_v_u64_m.c:35:5: warning: 'main' defined but not used [-Wunused-function]
   35 | int main(void) {
      |     ^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrssum_v_u64_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vrssum_v_u64_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vrssum_v_u64_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrssum_v_u64_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed